abbott app name change

--- a/src/app/component/abbott-app-json-sender/abbott-app-json-sender.component.html
+++ b/src/app/component/abbott-app-json-sender/abbott-app-json-sender.component.html
@@ -5,7 +5,7 @@
   <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
     <div>
       <mat-form-field style="width: 30%;" appearance="outline">
-        <mat-label>Abbott App</mat-label>
+        <mat-label>App Name</mat-label>
         <mat-select
           formControlName="abbottApp"
           (selectionChange)="onAbbottAppChange($event.value)"
