--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <mat-toolbar class="header-container" color="primary">
     <div class="left-menu" id="header-divmenualign-03">
-      <a
+     <!-- <a
         (click)="navigateToHome()"
         class="navbar-brand logo header-click"
         id="header-logo-04"
@@ -11,9 +11,9 @@
           id="header-logobrandimg-05"
           alt="Abbott Logo"
         /> Abbott
-      </a>
+      </a>-->
     </div>
-    <div class="mid-menu">Welcome to Abbott App Simulator</div>
+    <div class="mid-menu">Welcome to App Simulator</div>
     <div></div>
     <!-- <span class="user-avatar">
       <button mat-mini-fab class="user-name-logo">
